--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  fresh:
+  formz:
     runs-on: ubuntu-latest
     container:
       image: google/dart:2.8.1
@@ -25,3 +25,5 @@ jobs:
         run: pub run test_coverage
       - name: Check Code Coverage
         uses: ChicagoFlutter/lcov-cop@v1.0.0
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v1
