--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,13 +3,13 @@ description: A unified form representation in Dart which aims to simplify form r
 repository: https://github.com/ChicagoFlutter/formz
 issue_tracker: https://github.com/ChicagoFlutter/formz/issues
 homepage: https://github.com/ChicagoFlutter/formz
+documentation: https://github.com/ChicagoFlutter/formz
 
-version: 0.2.0
+version: 0.3.0
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dev_dependencies:
-  effective_dart: ^1.2.0
   test: ^1.14.2
   test_coverage: ^0.4.1
