--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,7 +7,7 @@ analyzer:
 
 linter:
   rules:
-    # - public_member_api_docs
+    - public_member_api_docs
     - annotate_overrides
     - avoid_empty_else
     - avoid_function_literals_in_foreach_calls
