--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,7 +12,7 @@ jobs:
   formz:
     runs-on: ubuntu-latest
     container:
-      image: google/dart:2.10.0
+      image: google/dart:2.12-beta
     steps:
       - uses: actions/checkout@v2
       - name: Install Dependencies
@@ -20,9 +20,9 @@ jobs:
       - name: Format
         run: dartfmt --dry-run --set-exit-if-changed .
       - name: Analyze
-        run: dartanalyzer --fatal-infos --fatal-warnings lib test
+        run: dartanalyzer --fatal-infos --enable-experiment=non-nullable --fatal-warnings lib test
       - name: Test
-        run: pub run test_coverage
+        run: pub run --enable-experiment=non-nullable test_coverage
       - name: Check Code Coverage
         uses: ChicagoFlutter/lcov-cop@v1.0.0
       - name: Upload Coverage to Codecov
