--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,11 +5,11 @@ issue_tracker: https://github.com/ChicagoFlutter/formz/issues
 homepage: https://github.com/ChicagoFlutter/formz
 documentation: https://github.com/ChicagoFlutter/formz
 
-version: 0.3.2
+version: 0.4.0-nullsafety.0
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dev_dependencies:
-  test: ^1.14.2
-  test_coverage: ^0.4.1
+  coverage: ^0.14.2
+  test: ^1.16.0-nullsafety.9
