--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,10 +5,10 @@ issue_tracker: https://github.com/ChicagoFlutter/formz/issues
 homepage: https://github.com/ChicagoFlutter/formz
 documentation: https://github.com/ChicagoFlutter/formz
 
-version: 0.4.0
+version: 0.4.1
 
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dev_dependencies:
   coverage: ^0.14.2
