--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,19 +11,50 @@ on:
 jobs:
   formz:
     runs-on: ubuntu-latest
-    container:
-      image: google/dart:2.12-dev
+
     steps:
       - uses: actions/checkout@v2
+      - uses: dart-lang/setup-dart@v1
+
       - name: Install Dependencies
-        run: pub get
+        run: dart pub get
+
       - name: Format
-        run: dartfmt --dry-run --set-exit-if-changed .
+        run: dart format --set-exit-if-changed .
+
       - name: Analyze
-        run: dartanalyzer --fatal-infos --fatal-warnings lib test
-      - name: Test
-        run: dart test --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+        run: dart analyze --fatal-infos --fatal-warnings .
+
+      - name: Run Tests
+        run: |
+          pub global activate test_coverage
+          export PATH=$PATH:$HOME/.pub-cache/bin
+          test_coverage
+
       - name: Check Code Coverage
-        uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
-      - name: Upload Coverage to Codecov
+        uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
+        with:
+          path: packages/bloc/coverage/lcov.info
+
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
+
+  pana:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2.3.4
+
+      - uses: subosito/flutter-action@v1.5.3
+
+      - name: Install Dependencies
+        run: |
+          flutter packages get
+          flutter pub global activate pana
+
+      - name: Verify Pub Score
+        run: |
+          PANA=$(pana . --no-warning); PANA_SCORE=$(echo $PANA | sed -n "s/.*Points: \([0-9]*\)\/\([0-9]*\)./\1\/\2/p")
+          echo "score: $PANA_SCORE"
+          IFS='/'; read -a SCORE_ARR <<< "$PANA_SCORE"; SCORE=SCORE_ARR[0]; TOTAL=SCORE_ARR[1]
+          if (( $SCORE < $TOTAL )); then echo "minimum score not met!"; exit 1; fi
