--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,12 @@ documentation: https://github.com/ChicagoFlutter/formz
 version: 0.4.1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
+
+dependencies:
+  meta: ^1.7.0
 
 dev_dependencies:
   coverage: ^0.14.2
   test: ^1.16.0
+  very_good_analysis: ^2.4.0
