--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,32 +10,7 @@ on:
 
 jobs:
   formz:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - uses: dart-lang/setup-dart@v1
-
-      - name: Install Dependencies
-        run: |
-          flutter pub global activate very_good_cli
-          very_good --analytics false
-          very_good packages get --recursive
-
-      - name: Format
-        run: dart format --set-exit-if-changed .
-
-      - name: Analyze
-        run: dart analyze --fatal-infos --fatal-warnings .
-
-      - name: Run Tests
-        run: |
-          pub global activate test_coverage
-          export PATH=$PATH:$HOME/.pub-cache/bin
-          test_coverage
-
-      - name: Check Code Coverage
-        uses: VeryGoodOpenSource/very_good_coverage@v1.2.0
+    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/dart_package.yml@v1
 
   pana:
     runs-on: ubuntu-latest
@@ -43,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
-      - uses: subosito/flutter-action@v1.5.3
+      - uses: subosito/flutter-action@v2
 
       - name: Install Dependencies
         run: |
