--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,17 +4,24 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.17.6 <3.0.0"
 
 dependencies:
+  decimal: ^2.2.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.0
   formz:
     path: ../
+  freezed_annotation: ^2.1.0
+  provider: ^6.0.3
+  regexpattern: ^2.0.1
 
 dev_dependencies:
+  build_runner: ^2.2.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.1.0+1
   very_good_analysis: ^3.1.0
 
 flutter:
