--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -2,3 +2,4 @@ include: package:very_good_analysis/analysis_options.3.1.0.yaml
 linter:
   rules:
     public_member_api_docs: false
+    require_trailing_commas: false
