feat: add dependabot

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # Remove the following pattern if you wish to check in your lock file
 pubspec.lock
 
+# Android Studio and IntelliJ
+.idea
+
 # Conventional directory for build outputs
 build/
 
