--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # Every request must be reviewed and accepted by:
 
-*	@felangel @jorgecoca @renancaraujo @wolfenrain
+*	@felangel @renancaraujo @wolfenrain
