--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ issue_tracker: https://github.com/VeryGoodOpenSource/formz/issues
 homepage: https://github.com/VeryGoodOpenSource/formz
 documentation: https://github.com/VeryGoodOpenSource/formz
 
-version: 0.5.0+1
+version: 0.6.0
 
 environment:
   sdk: ">=2.14.0 <3.0.0"
