--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,14 +4,14 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=3.4.0 <4.0.0"
+  sdk: ^3.5.0
 
 dependencies:
   flutter:
     sdk: flutter
   formz:
     path: ../
-  mocktail: ^1.0.0
+  mocktail: ^1.0.4
 
 dev_dependencies:
   flutter_test:
