--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,11 @@ documentation: https://github.com/VeryGoodOpenSource/formz
 version: 0.7.0
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ^3.5.0
 
 dependencies:
   meta: ^1.7.0
 
 dev_dependencies:
   test: ^1.16.0
-  very_good_analysis: ">=5.1.0 <7.0.0"
+  very_good_analysis: ^6.0.0
