--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -66,6 +66,9 @@ jobs:
       - uses: actions/checkout@v4.1.1
 
       - uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+          flutter-version: "3.25.0" #Forcing to 3.25.0 for right now as pana has an issue with Dart 3.6 https://github.com/dart-lang/dartdoc/issues/3947
 
       - name: Install Dependencies
         run: |
