chore: update Dart SDK to 3.8.0

--- a/.github/workflows/example.yaml
+++ b/.github/workflows/example.yaml
@@ -19,7 +19,7 @@ jobs:
   build:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
-      flutter_channel: stable
+      flutter_version: 3.32.0
 
   spell-check:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/spell_check.yml@v1
