--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
   build:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/dart_package.yml@v1
     with:
-      dart_sdk: "3.5.0" # The minimum Dart SDK version supported by the package.
+      dart_sdk: 3.8.0
       format_directories: "lib test"
       check_ignore: true
       report_on: "lib,test"
