--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,11 @@ documentation: https://github.com/VeryGoodOpenSource/formz
 version: 0.8.0
 
 environment:
-  sdk: ^3.8.0
+  sdk: ^3.9.0
 
 dependencies:
-  meta: ^1.7.0
+  meta: ^1.16.0
 
 dev_dependencies:
-  test: ^1.16.0
-  very_good_analysis: ">=9.0.0 <11.0.0"
+  test: ^1.26.3
+  very_good_analysis: ^10.0.0
